--- a/MerInspect-classic-era/templates/templates.xml
+++ b/MerInspect-classic-era/templates/templates.xml
@@ -49,7 +49,7 @@
 			</Layer>
 		</Layers>
 	</Frame>
-	<Frame name="ClassicStatFrameCategoryTemplate" virtual="true">
+	<Frame name="MerClassicEraCharacterStatFrameCategoryTemplate" virtual="true">
 		<Size x="197" y="40"/>
 		<Layers>
 			<Layer level="BACKGROUND">
@@ -73,7 +73,7 @@
 			</OnLoad>
 		</Scripts>
 	</Frame>
-    <Frame name="ClassicStatsFrameTemplate" inherits="BackdropTemplate" hidden="true" virtual="true">
+    <Frame name="MerClassicEraClassicStatsFrameTemplate" hidden="true" virtual="true" inherits="BackdropTemplate">
         <Size x="178" y="200"/>
         <Frames>
             <Frame parentKey="PortraitFrame" inherits="ClassicGarrisonFollowerPortraitTemplate">
@@ -102,7 +102,7 @@
                     </OnLoad>
                 </Scripts>
             </Frame>
-            <Frame parentKey="AttributesCategory" inherits="ClassicStatFrameCategoryTemplate">
+            <Frame parentKey="AttributesCategory" inherits="MerClassicEraCharacterStatFrameCategoryTemplate">
                 <KeyValues>
                     <KeyValue key="titleText" value="STAT_CATEGORY_ATTRIBUTES" type="global"/>
                 </KeyValues>
@@ -110,17 +110,17 @@
                     <Anchor point="TOPLEFT" relativeKey="$parent.PortraitFrame" relativePoint="BOTTOMLEFT" x="-14" y="0"/>
                 </Anchors>
             </Frame>
-            <Frame parentKey="ResistanceCategory" inherits="ClassicStatFrameCategoryTemplate">
+            <Frame parentKey="ResistanceCategory" inherits="MerClassicEraCharacterStatFrameCategoryTemplate">
                 <KeyValues>
                     <KeyValue key="titleText" value="STAT_RESISTANCE_ATTRIBUTES" type="global"/>
                 </KeyValues>
             </Frame>
-            <Frame parentKey="EnhancementsCategory" inherits="ClassicStatFrameCategoryTemplate">
+            <Frame parentKey="EnhancementsCategory" inherits="MerClassicEraCharacterStatFrameCategoryTemplate">
                 <KeyValues>
                     <KeyValue key="titleText" value="STAT_CATEGORY_ENHANCEMENTS" type="global"/>
                 </KeyValues>
             </Frame>
-            <Frame parentKey="SuitCategory" inherits="ClassicStatFrameCategoryTemplate">
+            <Frame parentKey="SuitCategory" inherits="MerClassicEraCharacterStatFrameCategoryTemplate">
                 <KeyValues>
                     <KeyValue key="titleText" value="STAT_SUIT_ATTRIBUTES" type="global"/>
                 </KeyValues>
@@ -128,53 +128,40 @@
         </Frames>
         <Scripts>
             <OnLoad>
-                ClassicStatsFrameTemplate_Onload(self)
+                MerClassicEraClassicStatsFrameTemplate_Onload(self)
             </OnLoad>
             <OnShow>
-                ClassicStatsFrameTemplate_OnShow(self)
+                MerClassicEraClassicStatsFrameTemplate_OnShow(self)
             </OnShow>
             <OnHide>
-                ClassicStatsFrameTemplate_OnHide(self)
+                MerClassicEraClassicStatsFrameTemplate_OnHide(self)
             </OnHide>
         </Scripts>
     </Frame>
-    <Frame name="ClassicCharacterStatFrameTemplate" inherits="BackdropTemplate" hidden="true" virtual="true">
-        <Size x="187" y="15"/>
-        <Layers>
-          <Layer level="BACKGROUND">
-            <Texture parentKey="Background" atlas="UI-Character-Info-Line-Bounce" useAtlasSize="true" alpha="0.3">
-              <Anchors>
-                <Anchor point="CENTER"/>
-              </Anchors>
-            </Texture>
-          </Layer>
-          <Layer level="ARTWORK">
-            <FontString parentKey="Label" inherits="GameFontNormalSmall">
-              <Anchors>
-                <Anchor point="LEFT" x="11" y="0"/>
-              </Anchors>
-            </FontString>
-            <FontString parentKey="Value" inherits="GameFontHighlightSmall">
-              <Anchors>
-                <Anchor point="RIGHT" x="-8" y="0"/>
-              </Anchors>
-            </FontString>
-          </Layer>
-        </Layers>
-        <Scripts>
-          <OnEnter>
-            if ( self.onEnterFunc ) then
-              self:onEnterFunc();
-            else
-              PaperDollStatTooltip(self);
-            end
-          </OnEnter>
-          <OnLeave function="GameTooltip_Hide"/>
-          <OnLoad>
-            if (STATFRAME_STATTEXT_FONT_OVERRIDE) then
-              self.Value:SetFontObject(STATFRAME_STATTEXT_FONT_OVERRIDE);
-            end
-          </OnLoad>
-        </Scripts>
-    </Frame>
+    <Frame name="MerClassicEraClassicCharacterStatFrameTemplate" virtual="true">
+		<Size x="187" y="15"/>
+		<Layers>
+			<Layer level="BACKGROUND">
+				<Texture parentKey="Background" atlas="UI-Character-Info-Line-Bounce" useAtlasSize="true" alpha="0.3">
+					<Anchors>
+						<Anchor point="CENTER"/>
+					</Anchors>
+				</Texture>
+			</Layer>
+			<Layer level="ARTWORK">
+				<FontString parentKey="Label" inherits="GameFontNormalSmall">
+					<Anchors>
+						<Anchor point="LEFT" x="11" y="0"/>
+					</Anchors>
+				</FontString>
+				<FontString parentKey="Value" inherits="GameFontHighlightSmall">
+					<Anchors>
+						<Anchor point="RIGHT" x="-8" y="0"/>
+					</Anchors>
+				</FontString>
+			</Layer>
+		</Layers>
+		<Scripts>
+		</Scripts>
+	</Frame>
 </Ui>
